bk_ida/gccida/c2/ix86_return_in_memory
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_return_in_memory/src/i386.c:2772:1: error: must use 'enum' tag to refer to type 'x86_64_reg_class'
x86_64_reg_class v9[10]; // [rsp+8h] [rbp-28h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_return_in_memory/src/i386.c:2778:27: error: use of undeclared identifier 'machine_mode'
v5 = classify_argument( ( machine_mode)v2, type, v9, 0); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_return_in_memory/src/i386.c:2801:46: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( _DWORD)v2 != 51 && ( ( unsigned int)( mode_class_0[v2] - 7) > 1 || int_size_in_bytes( type) != 8) ) 
                                             ^~~~~~~~~~~~
                                             mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_return_in_memory/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_return_in_memory/src/i386.c:2806:64: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( _DWORD)v4 == 6 || ( _DWORD)v4 == 18 || ( unsigned int)( mode_class_0[v4] - 7) <= 1 ) 
                                                               ^~~~~~~~~~~~
                                                               mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_return_in_memory/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_return_in_memory/src/obj/i386.o] Error 1
